@@ -31,8 +31,7 @@ var CloudCommander, Util, DOM, $;
         
         DOM.anyLoadOnLoad([lFiles], function(){
             console.timeEnd('terminal load');
-            init();
-            
+            init();             
             $(function($, undefined) {
                 Term = JqueryTerminal.Term = $('#terminal').terminal(function(command, term){                        
                     term.echo('');
@@ -49,6 +48,10 @@ var CloudCommander, Util, DOM, $;
             $(window).unbind('resize');
             
             Util.exec(pCallBack);
+        }).cssSet({id:'terminalStyle',
+             inner: '.cloudTerminal{'       +
+                        'height: 720px;'    +
+                    '};'
         });
     }
     
@@ -60,7 +63,7 @@ var CloudCommander, Util, DOM, $;
             TerminalId = DOM.anyload({
                 name        : 'div',
                 id          : 'terminal',
-                className   : 'panel',
+                className   : 'panel cloudTerminal',
                 parent      : DOM.getFM()
             });
     }
