@@ -117,7 +117,6 @@
                     mesage: 'Cloud Commander was killed'
                 };
                 send(pParams);
-                
                 lResult = null;
                 break;
         }
